--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -45,8 +45,8 @@
     top: @upperSpace;
 
     .side-bar-wrapper {
-        max-width: 270px;
-        max-height: 250px;
+        max-width: 300px;
+        //max-height: 250px;
     }
 }
 
