Revert percentage back to px due to firefox issue.

--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -38,7 +38,7 @@
         &.document {
             svg {
                 transform: rotate(-15deg);
-                width: 19%;
+                width: 43px;
                 height: auto;
                 /*@media(max-width: @tabletEndBreakPoint) {
                    width:15%;
@@ -51,8 +51,8 @@
 
         &.textbook {
             svg {
-                //width: 68px;
-                width: 24%;
+                width: 68px;
+                //width: 24%;
                 height: auto;
 
                 @media(max-width: @mobileEndBreakPoint) {
@@ -68,8 +68,8 @@
         &.homework {
             svg {
                 transform: rotate(-12.5deg);
-                //width: 60px;
-                width: 21%;
+                width: 60px;
+                //width: 21%;
                 height: auto;
 
                 @media(max-width: @mobileEndBreakPoint) {
