--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -15,6 +15,11 @@
 .sec-result {
     max-width: 504px;
     margin-top: @marginTop;
+    min-width: 0;
+
+    @media(max-width: @mobileEndBreakPoint) {
+        margin-top:0 ;
+    }
     //margin-top: @spaceFromTop;
     .result-cell {
         border-radius: 4px;
