--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -274,7 +274,7 @@
             padding: 0;
             max-width: 1280px;
 
-            
+
 
             @media(max-width: 600px) {
                 padding: 0 16px;
@@ -392,12 +392,10 @@
                 padding: 0 12px;
             }
         }
-
-        @media(max-width: 600px) {
+        /*@media(max-width: 600px) {
             margin: 0;
             padding: 12px 0;
-        }
-
+        }*/
         a {
             color: @color-white;
         }
@@ -516,7 +514,7 @@
         }
     }
 
-    @media screen and (max-width: 960px) {
+    @media screen and (max-width: @tabletEndBreakPoint) {
         .container {
             padding: 0 40px;
             width: 100%;
