--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,7 +1,4 @@
-﻿@import "../../mixin.less";
-.sec-result {
-    min-width: 0;
-}
+﻿
 .personalize-wrapper{
     background: white;
     border-radius: 4px;
