--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -97,7 +97,8 @@ button {
 @color-job: #f49c20;
 @color-food: #0ead91;
 @color-blue: #3293f6;
-@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue;
+@color-green: #7ed321;
+@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green;
 
 
 .loop2(@index2) when (@index2 <= length(@list-colors)) {
