Added breakponts mixin and renamed breakpoints

--- a/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
+++ b/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
@@ -4,7 +4,7 @@
     .d-cell {
         background: white;
 
-        @media(max-width: @mobileEndBreakPoint) {
+        @media(max-width: @screen-xs) {
             border-radius: 4px;
         }
     }
@@ -12,7 +12,7 @@
     .book-sources {
         background: white;
 
-        @media(max-width: @mobileEndBreakPoint) {
+        @media(max-width: @screen-xs) {
             border-radius: 4px;
         }
 
@@ -23,12 +23,12 @@
             .image {
                 max-width: 102px;
 
-                @media(max-width: @mobileEndBreakPoint) {
+                @media(max-width: @screen-xs) {
                     max-width: 120px;
                 }
             }
 
-            @media(max-width: @mobileEndBreakPoint) {
+            @media(max-width: @screen-xs) {
                 height: 62px;
 
                 .price-line-content {
@@ -69,7 +69,7 @@
                     text-align: center;
                     color: #000;
 
-                    @media(max-width: @mobileEndBreakPoint) {
+                    @media(max-width: @screen-xs) {
                         height: 32px;
                         line-height: 32px;
                     }
