--- a/Cloudents.Web/ClientApp/components/food/foodCell.less
+++ b/Cloudents.Web/ClientApp/components/food/foodCell.less
@@ -50,7 +50,7 @@
         overflow: hidden;
     }
 
-    @media(max-width: @mobileEndBreakPoint) {
+    @media(max-width: @screen-xs) {
         iframe {
             max-height: 100vh;
         }
