--- a/Cloudents.Web/ClientApp/components/home/search.less
+++ b/Cloudents.Web/ClientApp/components/home/search.less
@@ -22,7 +22,7 @@
         padding-left: 10px;
         margin-bottom: 12px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             font-size: 14px;
             height: 24px;
             margin-bottom: 8px;
@@ -36,7 +36,7 @@
         line-height: 2;
         letter-spacing: -0.3px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             font-size: 12px;
             letter-spacing: -0.2px;
         }
@@ -47,7 +47,7 @@
     .list__tile {
         height: 36px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             height: 27px;
         }
     }
@@ -55,14 +55,14 @@
     .list__tile--link {
         padding-left: 10px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             padding-left: 8px;
         }
 
         .list__tile__action {
             min-width: 32px;
 
-            @media(max-width: @tabletEndBreakPoint) {
+            @media(max-width: @screen-sm) {
                 min-width: 24px;
 
                 .icon {
@@ -91,7 +91,7 @@
     position: relative;
     //margin: 16px 0;
     //height: 100%;
-    @media(max-width: @tabletEndBreakPoint) {
+    @media(max-width: @screen-sm) {
         //margin: 8px;
         max-width: 752px; // this is 768 - 16 margin
         margin: -8px auto 0 !important; // hack on top because the two cells are in the same height( blame Shlomi)
@@ -112,7 +112,7 @@
         font-weight: bold;
         letter-spacing: -0.4px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             height: @submitMobileHeight;
         }
     }
@@ -120,7 +120,7 @@
     form .container {
         padding: 16px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             padding: 8px;
         }
     }
@@ -147,7 +147,7 @@
         }
 
 
-        @media(max-width:@tabletEndBreakPoint) {
+        @media(max-width:@screen-sm) {
             border-top-right-radius: 0;
             border-bottom-right-radius: 0;
             height: @submitMobileHeight;
@@ -167,7 +167,7 @@
         }
     }
 
-    @media(max-width: @tabletEndBreakPoint) {
+    @media(max-width: @screen-sm) {
         input {
             font-size: 14px;
             .placeholder-color(#5d5d5d);
@@ -187,7 +187,7 @@
             color: @color-white;
         }
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             margin: 0;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
