--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -185,7 +185,7 @@
                     transform: rotate(45deg);
                 }
 
-                @media(max-width: @mobileEndBreakPoint) {
+                @media(max-width: @screen-xs) {
 
                     label {
                         padding-left: 0;
