--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -40,7 +40,7 @@
         flex-grow: 1;
         flex-shrink: 0;
 
-        @media(max-width: @mobileEndBreakPoint) {
+        @media(max-width: @screen-xs) {
             margin: 8px 16px 0 18px;
         }
 
@@ -80,7 +80,7 @@
         flex-grow: 0;
         flex-shrink: 1;
 
-        @media(max-width: @mobileEndBreakPoint) {
+        @media(max-width: @screen-xs) {
             padding-top: 0;
         }
 
@@ -95,7 +95,7 @@
         .title-text {
             padding: 10px 0 30px 0;
 
-            @media(max-width: @mobileEndBreakPoint) {
+            @media(max-width: @screen-xs) {
                 padding: 0 0 20px 0;
             }
 
@@ -114,7 +114,7 @@
                 color: @Spitball-Text;
                 letter-spacing: -0.5px;
 
-                @media(max-width: @mobileEndBreakPoint) {
+                @media(max-width: @screen-xs) {
                     font-size: 26px;
                     line-height: 0.85;
                     letter-spacing: -0.3px;
@@ -135,7 +135,7 @@
         .search-wrapper {
             padding: 0;
 
-            @media(max-width: @mobileEndBreakPoint) {
+            @media(max-width: @screen-xs) {
                 padding: 0 8px;
             }
         }
@@ -145,7 +145,7 @@
             background: @color-light-grey;
             min-height: 56px;
 
-            @media(max-width: @mobileEndBreakPoint) {
+            @media(max-width: @screen-xs) {
                 min-height: 40px;
                 border: 1px solid #bbbbbb;
                 border-radius: 4px;
@@ -164,7 +164,7 @@
             input {
                 font-size: 20px;
 
-                @media(max-width: @mobileEndBreakPoint) {
+                @media(max-width: @screen-xs) {
                     font-size: 16px;
                     letter-spacing: -0.4px;
                 }
