--- a/Cloudents.Web/ClientApp/components/food/foodDetails.less
+++ b/Cloudents.Web/ClientApp/components/food/foodDetails.less
@@ -1,6 +1,6 @@
 ﻿@import "../../mixin.less";
 
-@media(max-width: @mobileEndBreakPoint) {
+@media(max-width: @screen-xs) {
 
     .food-detail {
         height: 100vh;
