--- a/Cloudents.Web/ClientApp/components/home/header.less
+++ b/Cloudents.Web/ClientApp/components/home/header.less
@@ -18,7 +18,7 @@
     }
 
     .toolbar__extension {
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             padding: 0 8px;
         }
     }
@@ -28,7 +28,7 @@
         margin: 0 auto;
         padding-left: 20px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             max-width: @maxWidth959;
             padding-left: 0;
         }
@@ -65,7 +65,7 @@
     .logo {
         margin-right: 10px;
 
-        @media(max-width: @tabletEndBreakPoint) {
+        @media(max-width: @screen-sm) {
             width:114px;
             height:23px;
         }
