--- a/Cloudents.Web/ClientApp/components/results/foodExtra.less
+++ b/Cloudents.Web/ClientApp/components/results/foodExtra.less
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     max-height: 444px; /*TODO: this is a temp solution*/
-    @media(max-width: @mobileEndBreakPoint) {
+    @media(max-width: @screen-xs) {
         max-height: 100vh;
     }
 }
