Fixes i Irena code.

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -17,8 +17,8 @@
     margin-top: @marginTop;
     min-width: 0;
 
-    @media(max-width: @mobileEndBreakPoint) {
-        margin-top:0 ;
+    @media(max-width: @screen-xs) {
+        margin-top: 0;
     }
     //margin-top: @spaceFromTop;
     .result-cell {
