--- a/Cloudents.Web/ClientApp/components/home/features.less
+++ b/Cloudents.Web/ClientApp/components/home/features.less
@@ -28,14 +28,14 @@
 
         &.textbook {
             svg {
-                .responsive-property(height, 54px,null,28px);
+                .responsive-property(height, 54px,null,25px);
             }
         }
 
         &.homework {
             svg {
                 transform: rotate(-12deg);
-                .responsive-property(height, 76px,null,28px);
+                .responsive-property(height, 76px,null,32px);
             }
         }
 
@@ -46,11 +46,12 @@
             color: #4a4a4a;
 
             h3 {
-                line-height: 1.44;
                 font-weight: 600;
                 color: #302eb5;
                 .responsive-property(font-size, 18px, 16px);
                 .responsive-property(color, #302eb5, #4a4a4a);
+                .responsive-property(font-weight, 600, 600, 400);
+                .responsive-property(line-height, 1.44, 1.13);
             }
         }
     }
