--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -156,6 +156,7 @@
 
                 .title-text {
                     color: @Food;
+                    padding-top: 10px;
                 }
             }
 
