--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -11,7 +11,8 @@
 
 //@spaceFromNavBar: @resultsTabsHeight + 40; //40 px of space according to Shlomi's request
 
-@marginTop : 42px;
+@marginTop: 42px;
+
 .sec-result {
     max-width: 504px;
     margin-top: @marginTop;
@@ -38,6 +39,12 @@
 
     .mobile-filter {
         flex-direction: row-reverse;
+
+        button {
+            @media(max-width: @screen-xs) {
+                margin: 13px 0 10px 0;
+            }
+        }
     }
 }
 
