--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -64,6 +64,7 @@
 
 .chip.filter-chip {
     margin: 0 8px 8px 0;
+    border: none;
 
     &:focus {
         box-shadow: none;
@@ -79,6 +80,7 @@
         letter-spacing: -0.8px;
         min-width: 102px;
         border-radius: 4px;
+        background: white;
         color: @color-grey;
         z-index: 0;
     }
@@ -93,6 +95,6 @@
     i {
         margin: 0 4px 0 16px;
         font-size: 10px;
-        color: @color-grey;
+        color: #bbb;
     }
 }
