--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -97,8 +97,9 @@ button {
 @color-job: #f49c20;
 @color-food: #0ead91;
 @color-blue: #3293f6;
+@color-dark-blue:#302eb5;
 @color-green: #7ed321;
-@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green;
+@list-colors: light-gray,ask,note,flashcard,tutor,job,food,book,blue,green,dark-blue;
 
 
 .loop2(@index2) when (@index2 <= length(@list-colors)) {
