--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -4,7 +4,7 @@
     height: 100%;
     background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
 
-    > div {
+    .wrapper {
         max-width: 800px;
         margin: 32px auto 0;
         
