--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -130,13 +130,13 @@
 .responsive-property(@property, @desktop, @tablet: null, @mobile: null) {
     @{property}: @desktop;
 
-    & when (ispixel(@tablet)) or (iscolor(@tablet)) or (ispercentage(@tablet)) or (isnumber(@tablet)) {
+    & when (ispixel(@tablet)) or (iscolor(@tablet)) or (ispercentage(@tablet)) or (isnumber(@tablet)) or (iscolor(@tablet)) {
         @media(max-width:@screen-sm) {
             @{property}: @tablet;
         }
     }
 
-    & when (ispixel( @mobile )) or (iscolor(@mobile)) or (ispercentage(@mobile)) or (isnumber(@mobile)) {
+    & when (ispixel( @mobile )) or (iscolor(@mobile)) or (ispercentage(@mobile)) or (isnumber(@mobile)) or (iscolor(@mobile)) {
 
         @media(max-width:@screen-xs) {
             @{property}: @mobile;
