Continue with sateliite pages.

--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -9,7 +9,15 @@
         margin: 32px auto 0;
         
     }
+    .image-section {
+        position: relative;
+        height: 280px;
+    }
     .h-icon {
+        position: absolute;
+        left:0;
+        right: 0;
         margin: 0 auto;
+        transform: translate(0, -50%);
     }
 }
